Fix jumping around while retaining left right shortcuts

--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -13,6 +13,7 @@
 	overflow: hidden;
 	padding: 0;
 	position: absolute;
+	display: hidden;
   }
   
   .carousel__ns__slides {
