--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,8 +217,8 @@ button {
 	z-index: 0;
 	position: relative; }
 	.bg-wrap .user-logo img {
-		width: 185px;
-		height: 185px;
+		width: 195px;
+		height: 195px;
 		border-radius: 50%;
 		margin: 0 auto; }
 
